--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/framework": "^5.0",
-        "silverstripe/admin": "^2.0"
+        "silverstripe/admin": "^2.0",
+        "symbiote/silverstripe-multivaluefield": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
