--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/framework": "^5.0",
-        "silverstripe/admin": "^2.0"
+        "silverstripe/admin": "^2.0",
+        "symbiote/silverstripe-multivaluefield": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
@@ -24,5 +25,12 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "phpstan/extension-installer": true,
+            "silverstripe/vendor-plugin": true
+        }
+    }
 }
